--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <!-- Header -->
         <header class="container mx-auto px-4 py-8">
             <div class="flex items-center justify-center mb-4">
-                <div class="w-16 h-16 bg-orange rounded-xl flex items-center justify-center mr-4 shadow-lg">
-                    <i class="bi bi-people-fill text-white text-2xl"></i>
+                <div class=" rounded-xl flex items-center justify-center mr-4 shadow-lg">
+                    <img src="./asset/favicon.png" alt="mygobuddy logo" class="w-16 h-16 border-4 border-orange rounded-xl">
                 </div>
                 <h1 class="text-3xl font-bold text-white">MyGoBuddy</h1>
             </div>
@@ -93,8 +93,8 @@
                 <!-- Waitlist Form -->
                 <div class="bg-white rounded-2xl shadow-2xl p-8 border border-gray-200">
                     <div class="text-center mb-8">
-                        <div class="w-16 h-16 bg-orange rounded-full flex items-center justify-center mx-auto mb-4">
-                            <i class="bi bi-person-plus text-white text-2xl"></i>
+                        <div class="flex items-center justify-center mx-auto mb-4">
+                            <img src="./asset/logo.png" alt="mygobuddy logo" class="w-32 ">
                         </div>
                         <h3 class="text-2xl font-bold text-navy mb-2">Join as a Buddy</h3>
                         <p class="text-gray-600">Get early access and be ready to start earning</p>
@@ -291,16 +291,19 @@
                 <div class="border-t border-white/20 pt-8">
                     <p class="text-blue-100">&copy; 2025 MyGoBuddy. A Buddy When You Need One.</p>
                     <div class="mt-4 flex justify-center space-x-6">
-                        <a href="#" class="text-blue-200 hover:text-orange transition-colors duration-300">
+                        <a href="support@mygobuddy.com" target="_blank" class="text-blue-200 hover:text-orange transition-colors duration-300">
                             <i class="bi bi-envelope text-xl"></i>
                         </a>
-                        <a href="#" class="text-blue-200 hover:text-orange transition-colors duration-300">
-                            <i class="bi bi-twitter text-xl"></i>
+                        <a href="https://www.instagram.com/mygobuddy?igsh=MTU3ZXRpMjZ6czBpYg==" target="_blank" class="text-blue-200 hover:text-orange transition-colors duration-300">
+                            <i class="bi bi-instagram text-xl"></i>
                         </a>
-                        <a href="#" class="text-blue-200 hover:text-orange transition-colors duration-300">
+                        <a href="#" target="_blank" class="text-blue-200 hover:text-orange transition-colors duration-300">
                             <i class="bi bi-facebook text-xl"></i>
                         </a>
-                        <a href="#" class="text-blue-200 hover:text-orange transition-colors duration-300">
+                        <a href="https://vm.tiktok.com/ZSSUSsRL2/" target="_blank" class="text-blue-200 hover:text-orange transition-colors duration-300">
+                            <i class="bi bi-tiktok text-xl"></i>
+                        </a>
+                        <a href="#" target="_blank" class="text-blue-200 hover:text-orange transition-colors duration-300">
                             <i class="bi bi-linkedin text-xl"></i>
                         </a>
                     </div>
