--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="order-2 bg-white rounded-2xl shadow-2xl p-8 border border-gray-200">
                     <div class="text-center mb-8">
                         <div class="flex items-center justify-center mx-auto mb-4">
-                            <img src="./asset/logo.png" alt="mygobuddy logo" class="w-32 ">
+                            <img src="./asset/logo-trns.png" alt="mygobuddy logo" class="w-32 ">
                         </div>
                         <h3 class="text-2xl font-bold text-navy mb-2">Join as a Buddy</h3>
                         <p class="text-gray-600">Get early access and be ready to start earning</p>
